workspaces/diff-engine/src/commands/snapshots/optic_diff_engine__commands__shape__test__can_handle_set_field_shape_command__unexisting_field_result.snap
---
source: workspaces/diff-engine/src/commands/shape.rs
expression: unexisting_field_result.unwrap_err()
---
Validation(
    "Command failed validation: field of shape descriptor must exist to set field shape, \"SetFieldShape(SetFieldShape { shape_descriptor: FieldShapeFromShape(FieldShapeFromShape { field_id: \\\"not-a-field\\\", shape_id: \\\"shape_3\\\" }) })\"",
)
